# external_v8

./: .travis.yml  CMakeLists.txt
include/: v8-platform.h
prebuilt/linux_amd64_gcc/: v8_centos6.sh
test/: CMakeLists.txt  v8_test.cpp
